--- a/main.bib
+++ b/main.bib
@@ -41,11 +41,11 @@ month={Dec}}
  year = {2014},
  issn = {1075-3583},
  articleno = {2},
- url = {http://dl.acm.org.ezp.lib.unimelb.edu.au/citation.cfm?id=2600239.2600241},
  acmid = {2600241},
  publisher = {Belltown Media},
  address = {Houston, TX}
 } 
+% url = {http://dl.acm.org.ezp.lib.unimelb.edu.au/citation.cfm?id=2600239.2600241},
 
 % cloud computing
 
@@ -61,12 +61,12 @@ month={Dec}}
  issn = {0001-0782},
  pages = {50--58},
  numpages = {9},
- url = {http://doi.acm.org.ezp.lib.unimelb.edu.au/10.1145/1721654.1721672},
  doi = {10.1145/1721654.1721672},
  acmid = {1721672},
  publisher = {ACM},
  address = {New York, NY, USA}
 } 
+% url = {http://doi.acm.org.ezp.lib.unimelb.edu.au/10.1145/1721654.1721672},
 
 % distributed computing
 
@@ -118,7 +118,7 @@ month={Jan},}
 
 % auto-scaling
 
-@article{DBLP:journals/corr/QuCB16,
+@article{Chenhao,
   author    = {Chenhao Qu and
                Rodrigo N. Calheiros and
                Rajkumar Buyya},
@@ -126,18 +126,57 @@ month={Jan},}
   journal   = {CoRR},
   volume    = {abs/1609.09224},
   year      = {2016},
-  url       = {http://arxiv.org/abs/1609.09224},
   archivePrefix = {arXiv},
   eprint    = {1609.09224},
   timestamp = {Wed, 07 Jun 2017 14:42:09 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/QuCB16},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+% url       = {http://arxiv.org/abs/1609.09224},
+
+@inproceedings{Arabnejad,
+ author = {Arabnejad, Hamid and Pahl, Claus and Jamshidi, Pooyan and Estrada, Giovani},
+ title = {A Comparison of Reinforcement Learning Techniques for Fuzzy Cloud Auto-Scaling},
+ booktitle = {Proceedings of the 17th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing},
+ series = {CCGrid '17},
+ year = {2017},
+ isbn = {978-1-5090-6610-0},
+ location = {Madrid, Spain},
+ pages = {64--73},
+ numpages = {10},
+ doi = {10.1109/CCGRID.2017.15},
+ acmid = {3101121},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {Cloud Computing, Controller, Fuzzy Logic, OpenStack, Orchestration, Q-Learning, SARSA}
+} 
+% url = {https://doi-org.ezp.lib.unimelb.edu.au/10.1109/CCGRID.2017.15},
+
+
+@article{LoridoBotran,
+ author = {Lorido-Botran, Tania and Miguel-Alonso, Jose and Lozano, Jose A.},
+ title = {A Review of Auto-scaling Techniques for Elastic Applications in Cloud Environments},
+ journal = {J. Grid Comput.},
+ issue_date = {December  2014},
+ volume = {12},
+ number = {4},
+ month = dec,
+ year = {2014},
+ issn = {1570-7873},
+ pages = {559--592},
+ numpages = {34},
+ doi = {10.1007/s10723-014-9314-7},
+ acmid = {2693559},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {Auto-scaling, Cloud computing, Scalable applications, Service level agreement},
+}
+%  url = {http://dx.doi.org.ezp.lib.unimelb.edu.au/10.1007/s10723-014-9314-7},
 
 
 % BoT
 
-@article{DBLP:journals/corr/abs-1711-08973,
+@article{Thai,
   author    = {Long Thai and
                Blesson Varghese and
                Adam Barker},
@@ -190,6 +229,13 @@ doi={10.1109/WSC.2017.8248116},
 ISSN={},
 month={Dec},}
 
+@techreport{athenaAllDoc,
+  title={ATHENA v1.0 Technical Documentation, User Guide, Administration Guide, Deployment Guide},
+  author={ATHENA Developers},
+  year={June 2018},
+  institution={Melbourne eResearch Group, University of Melbourne}
+}
+
 @techreport{athenaTechDoc,
   title={ATHENA Technical Documentation v1.0},
   author={ATHENA Developers},
@@ -220,6 +266,23 @@ month={Dec},}
 
 % examples
 
+@article{ToosiSB18,
+  author    = {Adel Nadjaran Toosi and
+               Richard O. Sinnott and
+               Rajkumar Buyya},
+  title     = {Resource provisioning for data-intensive applications with deadline
+               constraints on hybrid clouds using Aneka},
+  journal   = {Future Generation Comp. Syst.},
+  volume    = {79},
+  pages     = {765--775},
+  year      = {2018},
+  doi       = {10.1016/j.future.2017.05.042},
+  timestamp = {Tue, 28 Nov 2017 16:10:54 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/fgcs/ToosiSB18},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+%   url       = {https://doi.org/10.1016/j.future.2017.05.042},
+
 @article{Sinnott:2016:SCS:3008079.3008128,
  author = {Sinnott, R. O. and Voorsluys, W.},
  title = {A Scalable Cloud-based System for Data-intensive Spatial Analysis},
@@ -232,13 +295,13 @@ month={Dec},}
  issn = {1433-2779},
  pages = {587--605},
  numpages = {19},
- url = {http://dx.doi.org.ezp.lib.unimelb.edu.au/10.1007/s10009-015-0398-6},
  doi = {10.1007/s10009-015-0398-6},
  acmid = {3008128},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
  keywords = {Cloud computing, Geospatial systems, Spatial analysis, Urban research, e-Infrastructure}
 } 
+%  url = {http://dx.doi.org.ezp.lib.unimelb.edu.au/10.1007/s10009-015-0398-6},
 
 @techreport{swarmKubeBench,
   title={Comparison and Benchmarking of Cloud-based Container Orchestration Technologies},
@@ -246,3 +309,69 @@ month={Dec},}
   year={Nov 2017},
   institution={Melbourne eResearch Group, University of Melbourne}
 }
+
+@techreport{swarmKubeBench2,
+  title={A Performance Comparison of Cloud-based Container Orchestration Tools},
+  author={Yao Pan 
+  		and Min-ying Chen 
+  		and Richard O. Sinnott 
+  		and Francisco Brasileiro},
+  year={Nov 2017},
+  institution={Melbourne eResearch Group, University of Melbourne}
+}
+
+% kube
+
+@techreport{kubeDoc,
+  title={Kubernetes Documentation},
+  author={Kubernetes Developers},
+  url={https://kubernetes.io/docs/},
+  note={v1.10, access June 2018}
+}
+
+@article{Burns:2016:BOK:2898442.2898444,
+ author = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
+ title = {Borg, Omega, and Kubernetes},
+ journal = {Queue},
+ issue_date = {January-February 2016},
+ volume = {14},
+ number = {1},
+ month = jan,
+ year = {2016},
+ issn = {1542-7730},
+ pages = {10:70--10:93},
+ articleno = {10},
+ numpages = {24},
+ url = {http://doi.acm.org.ezp.lib.unimelb.edu.au/10.1145/2898442.2898444},
+ doi = {10.1145/2898442.2898444},
+ acmid = {2898444},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
+
+@article{44843,
+title	= {Borg, Omega, and   Kubernetes},
+author	= {Brendan Burns and Brian Grant and David Oppenheimer and Eric Brewer and John Wilkes},
+year	= {2016},
+URL	= {http://queue.acm.org/detail.cfm?id=2898444},
+journal	= {ACM Queue},
+pages	= {70--93},
+volume	= {14}
+}
+
+@inproceedings{43438,
+title	= {Large-scale cluster management at {Google} with {Borg}},
+author	= {Abhishek Verma and Luis Pedrosa and Madhukar R. Korupolu and David Oppenheimer and Eric Tune and John Wilkes},
+year	= {2015},
+booktitle	= {Proceedings of the European Conference on Computer Systems (EuroSys)},
+address	= {Bordeaux, France}
+}
+
+@book{Hightower:2017:KUR:3175917,
+ author = {Hightower, Kelsey and Burns, Brendan and Beda, Joe},
+ title = {Kubernetes: Up and Running Dive into the Future of Infrastructure},
+ year = {2017},
+ isbn = {1491935677, 9781491935675},
+ edition = {1st},
+ publisher = {O'Reilly Media, Inc.},
+} 
