--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,25 +1,69 @@
 % Appendix A
 
-\chapter{Frequently Asked Questions} % Main appendix title
+\chapter{Appendix} % Main appendix title
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\section{How do I change the colors of links?}
+%\section{Source Code}
+\hfill
+\\
+\textbf{Source Code Listing}
+\\
+\hrule
+\hfill
 
-The color of links can be changed to your liking using:
+\url{https://dstgrp.visualstudio.com/Daenerys/Daenerys Team/_git/deployment}
 
-{\small\verb!\hypersetup{urlcolor=red}!}, or
+\url{https://github.com/victorskl/auto-scaling-thesis}
 
-{\small\verb!\hypersetup{citecolor=green}!}, or
+\url{https://github.com/victorskl/kube-node}
 
-{\small\verb!\hypersetup{allcolor=blue}!}.
+\url{https://github.com/victorskl/wharfie}
 
-\noindent If you want to completely hide the links, you can use:
+\url{https://github.com/victorskl/nectar-os-scripts}
 
-{\small\verb!\hypersetup{allcolors=.}!}, or even better: 
+\url{https://github.com/victorskl/docker-private-registry}
 
-{\small\verb!\hypersetup{hidelinks}!}.
+\url{https://github.com/victorskl/docker-nexus-oss}
 
-\noindent If you want to have obvious links in the PDF but not the printed text, use:
+\url{https://github.com/victorskl/docker-mongodb}
 
-{\small\verb!\hypersetup{colorlinks=false}!}.
+\url{https://github.com/victorskl/docker-activemq}
+
+\url{https://github.com/victorskl/docker-postgresql}
+
+\url{https://github.com/victorskl/docker-redis}
+
+\url{https://github.com/victorskl/docker-java-beatapp}
+
+\url{https://github.com/victorskl/docker-cplex}
+
+\url{https://github.com/victorskl/spring-boot-tute}
+\\
+\\
+\noindent \textbf{Demo}
+\\
+\hrule
+\hfill
+
+\textit{* Need to be connected on UniMelb VPN}
+\hfill
+
+\url{https://115.146.84.84} -- Kubernetes Dashboard
+
+\url{http://115.146.84.84} -- Grafana Dashboard
+
+\url{http://115.146.84.84:9090} -- Prometheus Dashboard
+
+\url{http://115.146.84.84:9093} -- Prometheus Operator Alertmanager
+
+\url{http://115.146.85.147} -- ATHENA UI (Kube Deployment)
+
+\url{http://115.146.85.102/api/swagger} -- ATHENA Data Analytics
+
+
+
+
+
+
+
