--- a/main.tex
+++ b/main.tex
@@ -145,10 +145,25 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
  
 \vfill
 
-Student ID: 829463\\
-Total Credit Point: 25\\
-Type of Project: Software Development Project\\
-Subject Code: COMP90019\\
+%Student ID: 829463\\
+%Total Credit Point: 25\\
+%Type of Project: Software Development Project\\
+%Subject Code: COMP90019\\
+
+\begin{table}[H]
+\centering
+\begin{small}
+    \begin{tabular}{ | l | p{7cm} |}
+    \hline
+    Student ID & 829463 \\
+    Subject Code & COMP90019 Distributed Computing Project \\    
+    Total Credit Point & 25 \\
+    Type of Project & Software Development Project \\
+    \hline
+    \end{tabular}
+\end{small}
+\end{table}
+
 June 2018\\[0.4cm]
 
 %\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
@@ -172,19 +187,20 @@ June 2018\\[0.4cm]
 
 \begin{declaration}
 \addchaptertocentry{\authorshipname} % Add the declaration to the table of contents
+\bigskip\noindent\ignorespaces
 
 \noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I certify that:
 
 \begin{itemize} 
 \item This thesis does not incorporate without acknowledgement any material previously submitted for a degree or diploma in any university; and that to the best of my knowledge and belief it does not contain any material previously published or written by another person where due reference is not made in the text.
 \item Where necessary I have received clearance for this research from the University's Ethics Committee and have submitted all required data to the Department.
-\item The thesis is 10317 words in length.\\ % (excluding text in images, table, bibliographies and appendices)
+\item The thesis is 10588 words in length.\\ % (excluding text in images, table, bibliographies and appendices)
 \end{itemize}
  
-\noindent Signed By:  \emph{San Kho Lin}
+\noindent Signed By:  \textit{San Kho Lin}
 %\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
  
-\noindent Date: 4 June 2018
+\noindent Date: \textit{4 June 2018}
 %\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
 \end{declaration}
 
@@ -207,13 +223,13 @@ June 2018\\[0.4cm]
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 
-ATHENA is a strategic Discrete Event Simulation (DES) with optimisation and analysis system for manpower planning. It is state-of-the-art, purpose built distributed application. It is containerised and deployed into Cloud platform using Docker technologies. It is a compute intensive application, especially when an optimisation algorithm is activated in simulation. Scaling and, auto-scaling of an optimisation algorithm is the center of this thesis research.
+ATHENA is a strategic discrete event simulation, optimisation and analysis system for manpower planning. It is state-of-the-art, purpose built distributed application. It is containerised and deployed into Cloud platform using Docker technologies. It is a compute intensive application, especially when an optimisation algorithm is activated in simulation. Scaling and, auto-scaling of an optimisation algorithm is the center of this thesis research.
 
-Infrastructure scaling on cloud platform required provider specific API and technology. The containerisation deployment with Docker SWARM and Kubernetes technologies can scale across multi-Clouds independently, without the need of Cloud Provider specific API.
+Infrastructure scaling on Cloud platform required provider specific API and technology. The containerisation deployment with Docker SWARM and Kubernetes technologies can scale across multi-Clouds independently, without the need of Cloud Provider specific API.
 
-Auto-scaling system can not meet SLO and QoS by simply relying on CPU utilisation metrics alone. Most web and mobile applications require auto-scaling based on Requests Per Second to handle traffic bursts and user load. With new custom metrics API feature introduced in Kubernetes, we can extend the API and expose ATHENA's metrics to Prometheus, then can be consumed by HPA and auto-scaled. For enterprise integration system like ATHENA, the auto scaling could be triggered by the ActiveMQ job queue length exceeding some empirical threshold, therefore, Threshold-based reactive approach with Control Theory auto-scaling technique can be explored.
+Auto-scaling system can not meet SLO and QoS by simply relying on CPU utilisation metrics alone. Most web and mobile applications require auto-scaling based on \textit{Requests Per Second} to handle traffic bursts and user load. With new custom metrics API feature introduced in Kubernetes, we can extend the API and expose ATHENA's metrics to Prometheus, then can be consumed by HPA controller and auto-scaled. For enterprise integration system like ATHENA, the auto scaling could be triggered by the ActiveMQ job queue length exceeding some empirical threshold, therefore, Threshold-based reactive approach with Control Theory auto-scaling technique can be explored.
 
-Effective monitoring and metrics scraping is the heart of the pipeline for auto-scaler to work reliably well. Auto-scaling with Kubernetes is non trivial to setup for \emph{Production Ready} in Private Cloud, such as NeCTAR Research Cloud.
+Effective monitoring and metrics scraping is the heart of the pipeline for auto-scaler to work reliably well. Auto-scaling with Kubernetes is non trivial task to setup for \emph{Production Ready} in Private Cloud, such as NeCTAR Research Cloud.
 \\
 \\
 \\
@@ -227,13 +243,17 @@ Keywords: \keywordnames
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
+\bigskip\noindent\ignorespaces
 
-I would like to thank my supervisor Professor Richard Sinnott for giving me opportunity to research on this challenging project. The door to Professor Sinnott's office was always open whenever I ran into a trouble spot or had a question about my research or writing. He consistently allowed this paper to be my own work, but steered us in the right the direction whenever he thought I needed it.
-
-I am also indebted to my colleagues who work together in ATHENA project, their contribution and, influenced this thesis with their ideas and thoughtful criticisms.
-
+I would like to thank my supervisor Professor Richard Sinnott for giving me opportunity to research on this challenging project. The door to Professor Sinnott's office was always open whenever I ran into a trouble spot or had a question about my research or writing. He consistently allowed this paper to be my own work, but steered me in the right the direction whenever he thought I needed it.
+\\
+\\
+I am also indebted to my colleagues who work together in the ATHENA project, their contribution and, influenced this thesis with their ideas and thoughtful criticisms.
+\\
+\\
 I would like to thank my family for providing me with unfailing support and continuous encouragement throughout the years of study and through the process of researching and writing this thesis. This accomplishment would not have been possible without them.
-
+\\
+\\
 This research was supported by use of the NeCTAR Research Cloud, a collaborative Australian research platform supported by the National Collaborative Research Infrastructure Strategy.
 
 
@@ -322,7 +342,7 @@ This research was supported by use of the NeCTAR Research Cloud, a collaborative
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-%\include{Appendices/AppendixA}
+\include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
 
