--- a/main.bib
+++ b/main.bib
@@ -310,15 +310,16 @@ month={Dec},}
   institution={Melbourne eResearch Group, University of Melbourne}
 }
 
-@techreport{swarmKubeBench2,
+@article{swarmKubeBench2,
   title={A Performance Comparison of Cloud-based Container Orchestration Tools},
   author={Yao Pan 
   		and Min-ying Chen 
   		and Richard O. Sinnott 
   		and Francisco Brasileiro},
-  year={Nov 2017},
-  institution={Melbourne eResearch Group, University of Melbourne}
+  year={December 2017},
+  journal = {submitted to Journal of Concurrency and Computation: Practice and Experience},
 }
+
 
 % kube
 
